[gd_scene load_steps=2 format=3 uid="uid://bh8c5n2jc5gup"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_7j1ck"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7j1ck")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "HEALTH: 100"

[node name="ArmorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.5, 1, 1)
theme_override_font_sizes/font_size = 24
text = "ARMOR: 100"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "WEAPON: BOLTGUN"
horizontal_alignment = 2

[node name="AmmoLabel" type="Label" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "AMMO: 24 / 96"
horizontal_alignment = 2

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Top" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_top = -15.0
offset_right = 2.0
offset_bottom = -5.0
grow_horizontal = 2
color = Color(0, 1, 0, 1)

[node name="Bottom" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -35.0
offset_right = 2.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 1, 0, 1)

[node name="Left" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -2.0
offset_right = -5.0
offset_bottom = 2.0
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="Right" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -2.0
offset_right = -25.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 1, 0, 1)
